--- a/package.json
+++ b/package.json
@@ -4,22 +4,14 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/jbryanmcgrath/just-tech-news.git"
-  },
-  "author": "Bryan McGrath",
+  "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/jbryanmcgrath/just-tech-news/issues"
-  },
-  "homepage": "https://github.com/jbryanmcgrath/just-tech-news#readme",
   "dependencies": {
-    "dotenv": "^14.2.0",
-    "express": "^4.17.2",
-    "mysql2": "^2.3.3",
-    "sequelize": "^6.14.0"
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mysql2": "^2.1.0",
+    "sequelize": "^5.21.5"
   }
 }
